--- a/capybara bewerken.html
+++ b/capybara bewerken.html
@@ -3,6 +3,8 @@
 <head>
   <title>Capybara's</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="Capybara bewerken.css">
+  
 </head>
 
 <body>
@@ -20,9 +22,6 @@
           <li>
             <a href="#introduction">About Capybara's</a>
           </li>
-          
-        </ul>
-        
         <li>
             <a href="#diet">Diet and predation</a>
           </li>
