--- a/capybara bewerken.html
+++ b/capybara bewerken.html
@@ -4,7 +4,7 @@
   <title>Capybara's</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="Capybara bewerken.css">
-  
+  <link rel="icon" type="image/png" href="favicon-16x16">
 </head>
 
 <body>
