--- a/capybara bewerken.html
+++ b/capybara bewerken.html
@@ -53,7 +53,10 @@
         </p>
       </div>
       <div id="media">
-        <h2>https://youtu.be/wE6pEsjgdHo</h2>
+        <h2video</h2>
+        <p>
+       <a href="https://youtu.be/wE6pEsjgdHo"
+          </p>
        
       </div>
     </div>
